--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <script src="/engine/out/core/Display/stage.js"></script>
     <script src="/engine/out/main.js"></script>-->-->
     <script src="/engine/out/engine.js"></script>
-    <!--<script src="/Game/out/Game.js "></script>-->
-    <script src="/test/out/test.js" "></script>
+    <script src="/Game/out/Game.js "></script>
+    <!--<script src="/test/out/test.js" "></script>-->
 </head>
 
 <body>
